--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.color-picker {
+  text-align: center;
+  margin-top: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.color-list {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+
+.color-square {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.color-square:hover {
+  border: 1px solid #333;
+}
+
+.pick-button {
+  width: 100px;
+  height: 100px;
+  margin-top: 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.pick-button:hover {
+  background-color: #45a049;
 }
